# web-scraping

./: README.md  pyproject.toml
web_scraping/: notebook.ipynb
