[tool.poetry]
name = "web-scraping"
version = "0.1.0"
description = ""
authors = ["c-Tos1wa <cristoshiwassaki@gmail.com>"]
readme = "README.md"
packages = [{include = "web_scraping"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
jupyterlab = "^3.6.1"
matplotlib = "^3.6.3"
wordcloud = "^1.8.2.2"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
numpy = "^1.24.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
